crates/alba-shell/src/snapshots/alba_shell__lexer__tests__a_digit_not_glued_to_a_redirect_stays_a_word.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "kinds(\"echo 2 > f\")"
---
[
    Word(
        Word {
            parts: [
                Text(
                    "echo",
                ),
            ],
            span: Span {
                start: 0,
                end: 4,
            },
        },
    ),
    Word(
        Word {
            parts: [
                Text(
                    "2",
                ),
            ],
            span: Span {
                start: 5,
                end: 6,
            },
        },
    ),
    RedirectOut {
        stderr: false,
        append: false,
    },
    Word(
        Word {
            parts: [
                Text(
                    "f",
                ),
            ],
            span: Span {
                start: 9,
                end: 10,
            },
        },
    ),
]
