crates/alba-shell/src/snapshots/alba_shell__lexer__tests__adjacent_parts_form_one_word.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "word_parts(&kinds[0])"
---
[
    Text(
        "a",
    ),
    Var(
        "B",
    ),
    SingleQuoted(
        "c",
    ),
    DoubleQuoted(
        [
            Text(
                "d",
            ),
        ],
    ),
]
