crates/alba-shell/src/snapshots/alba_shell__lexer__tests__dollar_without_a_name_is_literal.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "kinds(\"echo $ x$ $%\")"
---
[
    Word(
        Word {
            parts: [
                Text(
                    "echo",
                ),
            ],
            span: Span {
                start: 0,
                end: 4,
            },
        },
    ),
    Word(
        Word {
            parts: [
                Text(
                    "$",
                ),
            ],
            span: Span {
                start: 5,
                end: 6,
            },
        },
    ),
    Word(
        Word {
            parts: [
                Text(
                    "x$",
                ),
            ],
            span: Span {
                start: 7,
                end: 9,
            },
        },
    ),
    Word(
        Word {
            parts: [
                Text(
                    "$%",
                ),
            ],
            span: Span {
                start: 10,
                end: 12,
            },
        },
    ),
]
