crates/alba-shell/src/snapshots/alba_shell__lexer__tests__recognizes_operators.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "kinds(\"a && b || c | d ; e\")"
---
[
    Word(
        Word {
            parts: [
                Text(
                    "a",
                ),
            ],
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ),
    AndAnd,
    Word(
        Word {
            parts: [
                Text(
                    "b",
                ),
            ],
            span: Span {
                start: 5,
                end: 6,
            },
        },
    ),
    OrOr,
    Word(
        Word {
            parts: [
                Text(
                    "c",
                ),
            ],
            span: Span {
                start: 10,
                end: 11,
            },
        },
    ),
    Pipe,
    Word(
        Word {
            parts: [
                Text(
                    "d",
                ),
            ],
            span: Span {
                start: 14,
                end: 15,
            },
        },
    ),
    Semi,
    Word(
        Word {
            parts: [
                Text(
                    "e",
                ),
            ],
            span: Span {
                start: 18,
                end: 19,
            },
        },
    ),
]
