crates/alba-shell/src/snapshots/alba_shell__lexer__tests__recognizes_redirections.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "kinds(\"a > f >> g < h 1> i 1>> j 2> k 2>> l 2>&1\")"
---
[
    Word(
        Word {
            parts: [
                Text(
                    "a",
                ),
            ],
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ),
    RedirectOut {
        stderr: false,
        append: false,
    },
    Word(
        Word {
            parts: [
                Text(
                    "f",
                ),
            ],
            span: Span {
                start: 4,
                end: 5,
            },
        },
    ),
    RedirectOut {
        stderr: false,
        append: true,
    },
    Word(
        Word {
            parts: [
                Text(
                    "g",
                ),
            ],
            span: Span {
                start: 9,
                end: 10,
            },
        },
    ),
    RedirectIn,
    Word(
        Word {
            parts: [
                Text(
                    "h",
                ),
            ],
            span: Span {
                start: 13,
                end: 14,
            },
        },
    ),
    RedirectOut {
        stderr: false,
        append: false,
    },
    Word(
        Word {
            parts: [
                Text(
                    "i",
                ),
            ],
            span: Span {
                start: 18,
                end: 19,
            },
        },
    ),
    RedirectOut {
        stderr: false,
        append: true,
    },
    Word(
        Word {
            parts: [
                Text(
                    "j",
                ),
            ],
            span: Span {
                start: 24,
                end: 25,
            },
        },
    ),
    RedirectOut {
        stderr: true,
        append: false,
    },
    Word(
        Word {
            parts: [
                Text(
                    "k",
                ),
            ],
            span: Span {
                start: 29,
                end: 30,
            },
        },
    ),
    RedirectOut {
        stderr: true,
        append: true,
    },
    Word(
        Word {
            parts: [
                Text(
                    "l",
                ),
            ],
            span: Span {
                start: 35,
                end: 36,
            },
        },
    ),
    StderrToStdout,
]
