crates/alba-shell/src/snapshots/alba_shell__lexer__tests__recognizes_the_last_exit_status_parameter.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "kinds(\"echo $?\")"
---
[
    Word(
        Word {
            parts: [
                Text(
                    "echo",
                ),
            ],
            span: Span {
                start: 0,
                end: 4,
            },
        },
    ),
    Word(
        Word {
            parts: [
                LastExit,
            ],
            span: Span {
                start: 5,
                end: 7,
            },
        },
    ),
]
