crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_a_positional_parameter.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"echo $1x\").render(\"echo $1x\")"
---
error: positional parameters like `$1` are not supported
  │ echo $1x
  │      ^^
  = help: move the logic into a script invoked by `run`, or declare `executor system_shell` on this beam
