crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_a_special_parameter_inside_double_quotes.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(r#\"echo \"pid $$\"\"#).render(r#\"echo \"pid $$\"\"#)"
---
error: the special parameter `$$` is not supported
  │ echo "pid $$"
  │           ^^
  = help: move the logic into a script invoked by `run`, or declare `executor system_shell` on this beam
