crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_a_trailing_backslash.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"echo a\\\\\").render(\"echo a\\\\\")"
---
error: incomplete escape at end of command
  │ echo a\
  │       ^
