crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_advanced_parameter_expansion.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"echo ${X:-y}\").render(\"echo ${X:-y}\")"
---
error: advanced parameter expansions like `${VAR:-default}` are not supported
  │ echo ${X:-y}
  │      ^^^^
  = help: move the logic into a script invoked by `run`, or declare `executor system_shell` on this beam
